# chest-xpert-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: config.py  dependencies.py  errors.py  main.py  telemetry.py
app/routers/: health.py  predict.py
app/schemas/: __init__.py  prediction.py
app/services/: filter.py  inference.py  preprocessing.py
models/: chest-xpert-model.onnx
scripts/: download_test_images.py
tests/: conftest.py  test_edge_cases.py  test_filter.py  test_health.py  test_predict.py  test_preprocessing.py
