[project]
name = "chest-xpert-backend"
version = "1.0.1"
description = "Chest-Xpert AI Inference API — FastAPI backend with ONNX Runtime"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "onnxruntime>=1.25.0",
    "numpy>=2.3.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "hypothesis>=6.130.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "kaggle>=1.6.0",
    "ruff>=0.11.0",
    "python-semantic-release>=10.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# Ruff — Linting and formatting
# =============================================================================
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "S101",  # assert used (fine in tests)
    "B008",  # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "T20"]
"scripts/**/*.py" = ["T20", "S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Python Semantic Release — Automatic versioning from Conventional Commits
# =============================================================================
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_author = "semantic-release <semantic-release@users.noreply.github.com>"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
tag_format = "v{version}"
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
